# OOP

prog1/: CMakeLists.txt
prog1/src/: main.cpp
prog2/: CMakeLists.txt
prog2/src/: StatisticMultiset.h  main.cpp
prog3/: CMakeLists.txt
prog3/src/: WavExceptions.h  main.cpp  wav.cpp  wav.h  wav_core.h
prog4/: CMakeLists.txt
prog4/src/: PrimeFactoring.cpp  PrimeFactoring.h  main.cpp
